assets/css/main.css
:root {
    --radius-large: 24px;
    --radius-full: 1000px;
    --spacing-regular: 12px;
    --spacing-large: 16px;

    --primary: #aac7ff;
    --on-primary: #0b305f;
    --primary-container: #284777;
    --on-primary-container: #d7e3ff;

    --secondary: #bec6dc;
    --on-secondary: #283141;
    --secondary-container: #3e4759;
    --on-secondary-container: #dae2f9;

    --tertiary: #ddbce0;
    --on-tertiary: #3f2844;
    --tertiary-container: #573e5c;
    --on-tertiary-container: #fad8fd;

    --error: #ffb4ab;
    --on-error: #690005;
    --error-container: #93000a;
    --on-error-container: #ffdad6;

    --surface: #111318;
    --on-surface: #e2e2e9;
    --surface-variant: #44474e;
    --on-surface-variant: #c4c6d0;

    --surface-container-highest: #33353a;
    --surface-container-high: #282a2f;
    --surface-container: #1e2025;
    --surface-container-low: #191c20;
    --surface-container-lowest: #0c0e13;
    --inverse-surface: #e2e2e9;
    --inverse-on-surface: #2e3036;
    --surface-tint: #aac7ff;

    --outline: #8e9099;
    --outline-variant: #44474e;
    --shadow: #000000;
}

html {
    height: -webkit-fill-available; /* replace with stretch when standardized */
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    min-height: -webkit-fill-available; /* replace with stretch when standardized */
    font-family: Noto, sans;
    line-height: 1.5;
    letter-spacing: 0.009375rem;
    background: var(--surface);
    color: var(--on-surface);
    margin: 0;
    padding: 0;
    overflow-y: scroll;
}

::selection {
    color: var(--surface);
    background: var(--on-surface);
}

::-moz-selection {
    color: var(--surface);
    background: var(--on-surface);
}

a {
    color: var(--primary);
}

a:visited {
    color: var(--tertiary);
}

h1 a, h1 a:visited, h2 a, h2 a:visited, h3 a, h3 a:visited, h4 a, h4 a:visited, h5 a, h5 a:visited, h6 a, h6 a:visited {
    color: rgba(255 255 255 / 87%);
}


h1 {
    font-size: 2.25rem;
    line-height: 2.75rem;
    letter-spacing: 0;
}

h2 {
    font-size: 1.5rem;
    line-height: 2rem;
    letter-spacing: 0;
}

h3 {
    font-size: 1.375rem;
    line-height: 1.75rem;
    letter-spacing: 0;
}

h4 {
    font-size: 1rem;
    line-height: 1.5rem;
    letter-spacing: 0.009375rem;
}

h5 {
    font-size: 0.875rem;
    line-height: 1.25rem;
    letter-spacing: 0.00625rem;
}

h6 {
    font-size: 0.6875rem;
    line-height: 1rem;
    letter-spacing: 0.03125rem;
}

em {
    font-weight: bold;
}

code, pre {
    background-color: var(--surface-variant);
    color: var(--on-surface-variant);
    font-family: "Noto Mono", monospace;
    font-size: 0.875rem; /* body-medium.size */
    letter-spacing: 0.015625rem; /* body-medium.tracking */
    line-height: 1.25rem; /* body-medium.line-height */
}

pre {
    border-radius: 12px;
    border: 1px solid var(--outline);
    overflow-x: auto;
    padding: 0.875rem;
}

code {
    border-radius: 8px;
    padding: 0 2px;
}

pre, details, details[open] summary {
    border-color: var(--outline);
}

var {
    color: #ffb4ab;
}

blockquote {
    background-color: #ff0000;
}

.coin-address {
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.coin-address img {
    image-rendering: pixelated;
    width: 180px;
    height: 180px;
    border-radius: 16px;
}

main {
    margin-left: auto;
    margin-right: auto;
    padding: 1em;
    max-width: 832px;
    min-width: 0;
    width: 100%;
    box-sizing: border-box;
    overflow-wrap: break-word;
    /* This is for the navbar */
    padding-top: 64px;
    flex: 1 0 auto;
}

ul ul {
    padding-left: 20px;
}

footer {
    padding: 0.5em 1em;
    text-align: center;
    overflow-wrap: break-word;
    background: var(--surface-container);
    border-top-left-radius: var(--radius-large);
    border-top-right-radius: var(--radius-large);
}

footer a, footer a:visited {
    color: var(--on-surface-variant)
}

#footer-columns {
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    gap: 1rem;
    align-items: center;
}

#footer-columns ul {
    padding: 0;
}

#pfp-layout {
    display: flex;
    text-align: left;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    list-style: none;
    justify-self: start;
}

#pfp-layout li {
    display: block;
    padding: 0 0.5em;
}

.footer-row {
    justify-self: center;
}

.footer-row li {
    display: inline-block;
    padding: 0 0.5em;
}

.footer-column {
    justify-self: end;
    text-align: left;
}

.footer-column li {
    display: block;
    padding: 0 0.5em;
}

#site-menu {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    list-style: none;
    background-color: var(--surface-container);
    white-space: nowrap;
    margin: var(--spacing-regular);
    border-radius: var(--radius-full);
    filter: drop-shadow(0 0 6px var(--shadow));
}

#site-menu ul {
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: repeat(3, 1fr);
    padding: 0;
    margin: 0;
    list-style: none;
    text-align: center;
}

#site-menu li {
    text-align: center;
}

#site-menu ul li {
    list-style-type: none;
    display: flex;
    border-radius: var(--radius-full);
}

#site-menu ul li:hover {
    background-color: var(--surface-container-high);
}

#site-menu ul li[aria-current] {
    background-color: var(--secondary-container);
}

#site-menu ul li[aria-current]:hover {
    background-color: var(--secondary-container);
}

#site-menu ul li a {
    color: var(--on-surface)
    display: flex;
    text-decoration: none;
    padding: 1em;
    justify-content: center;
    width: 100%;
}

#site-menu ul li a:visited {
    color: var(--on-secondary-container);
}

#site-menu ul li[aria-current] a {
    color: var(--on-secondary-container);
}

#site-menu ul li[aria-current]:hover a {
    color: var(--on-secondary-container);
}

button, select, option, input, select, textarea {
    font-family: inherit;
}
/* ... */

